--- a/main_version/server/modules/easylog/Makefile
+++ b/main_version/server/modules/easylog/Makefile
@@ -2,8 +2,8 @@
 #include comm/common.mk
 
 AIM:=APP
-TARGET:=libeasylog.so
-DEPENDS:=easylog.cpp
-EXTRA:=-shared -fPIC
+TARGET:=libeasylog.a
+DEPENDS:=easylog.cpp transform.cpp
+EXTRA:=
 
 include $(MAKE_COMMON)
