add Tunit for buffer.hpp

--- a/main_version/Tunit/tools/Makefile
+++ b/main_version/Tunit/tools/Makefile
@@ -1,8 +1,8 @@
 #!/bin/bash
 
 AIM:=APP
-TARGET:=Tunit_easylog
-DEPENDS:=easylog_test.cpp
-EXTRA:=-leasylog -lgtest
+TARGET:=Tunit_tool
+DEPENDS:=tools_test.cpp
+EXTRA:=-lgtest -lgtest_main -pthread -lm
 
 include $(MAKE_COMMON)
