add Tunit for easylog

--- a/main_version/Tunit/easylog/Makefile
+++ b/main_version/Tunit/easylog/Makefile
@@ -3,6 +3,6 @@
 AIM:=APP
 TARGET:=Tunit_easylog
 DEPENDS:=easylog_test.cpp
-EXTRA:=-leasylog -lgtest
+EXTRA:=-leasylog -lgtest -lgtest_main -pthread -lm
 
 include $(MAKE_COMMON)
